# RustyShop

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
DB/: DataBase.SQLITE  demo.sql  schema.txt
migrations/2020-05-18-150140_create_user/: down.sql  up.sql
migrations/2020-05-18-150140_create_users/: up.sql
migrations/2020-05-18-152538_create_product/: down.sql  up.sql
migrations/2020-05-18-152538_create_products/: down.sql  up.sql
migrations/2020-05-18-152715_create_payment/: down.sql  up.sql
migrations/2020-05-18-152715_create_payments/: down.sql  up.sql
migrations/2020-05-18-152809_create_order/: down.sql  up.sql
migrations/2020-05-18-152809_create_orders/: down.sql  up.sql
migrations/2020-05-18-153100_create_ordered_products/: down.sql  up.sql
src/: database.rs  lib.rs  main.rs  models.rs  schema.rs  website.rs
templates/: base.headless.html.tera  base.html.tera  checkout.html.tera  dashboard.html.tera  index.html.tera  single.html.tera
templates/files/css/: custom.css  dashboard.css
templates/files/js/: checkout.js  custom.js
