[package]
name = "rusty-shop"
version = "0.1.0"
authors = ["Hamid R. K. Pishghadam <hamidrkp@riseup.net>"]
edition = "2018"

[dependencies]
rocket = "0.4"
dotenv = "0.9.0"
diesel = { version = "1.0.0", features = ["sqlite"] }
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["diesel_sqlite_pool"]
