[package]
name = "rusty_shop"
version = "0.1.0"
authors = ["Hamid R. K. Pishghadam <hamidrkp@riseup.net>"]
edition = "2018"

[dependencies]
rocket = "0.4"
diesel = { version = "1.0.0", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["diesel_sqlite_pool", "tera_templates", "serve"]
